fix: ending on Mobile

--- a/src/components/containers/Seabed/_styles.scss
+++ b/src/components/containers/Seabed/_styles.scss
@@ -92,7 +92,7 @@
 
 .seabed__go--experiences {
   bottom          : 150px;
-  left            : 22vw;
+  left            : 20vw;
   justify-content : flex-start;
   text-align      : center;
 
@@ -108,7 +108,7 @@
 .seabed__go--otherSkills {
   top             : 170px;
   bottom          : initial;
-  right           : 35vw;
+  right           : 33vw;
   justify-content : flex-end;
   text-align      : center;
 
@@ -126,12 +126,8 @@
   opacity     : 0.9;
   text-shadow : 0 0 3px $blue--dark;
   font-family : sans-serif;
-  font-size   : 1.4rem;
+  font-size   : 2.8rem;
   color       : $white;
-
-  @media all and (min-width: 400px) {
-    font-size : 2.8rem;
-  }
 
   @media all and (min-width: 768px) {
     opacity     : 0.7;
